# norlab_controllers

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt  setup.py  test_parameters.yaml  tester.py
controllers/: controller.py  controller_factory.py  differential_orthogonal_exponential.py
examples/: getting_started.py  test_parameters_smpc.yaml  traj_a_int.npy
norlab_controllers/: Path.cpp  Path.h
norlab_controllers/controllers/: Controller.cpp  Controller.h  DifferentialOrthogonalExponential.cpp  DifferentialOrthogonalExponential.h
norlabcontrollib/controllers/: __init__.py  controller.py  controller_factory.py  differential_orthogonal_exponential.py  differential_rotation_p.py  ideal_diff_drive_mpc.py  pwrtrn_diff_drive_mpc.py  pwrtrn_ideal_diff_drive_mpc.py  slip_blr_diff_drive_smpc.py  slip_blr_pwrtrn_diff_drive_mpc.py  stochastic_linear_mpc.py
norlabcontrollib/models/: blr_slip.py  ideal_diff_drive.py
norlabcontrollib/models/trained_params/husky/grand_salon/slip_blr/: a_param_n_x.npy  b_param_n_x.npy  b_param_n_y.npy  b_param_n_yaw.npy  covariance_x.npy  covariance_y.npy  covariance_yaw.npy  weights_x.npy  weights_y.npy  weights_yaw.npy
norlabcontrollib/path/: cost_map.py  path.py
norlabcontrollib/util/: util_func.py
notebooks/: single_horizon_mpc.ipynb
path/: path.py
test/: test_parameters.yaml  test_parameters_dd_orhexp.yaml  test_parameters_smpc.yaml  tester.py
