[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[project]
name = "norlabcontrollib"
description = "NorLab Control Library"
version = "0.1.0"
authors = [{ name = "Dominic Baril", email = "dominic.baril@norlab.ulaval.ca" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = ['numpy', 'scipy', 'PyYAML', 'casadi==3.6.0']
keywords = ["norlab", "robotics", "control", "mpc"]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = ["black", "pylint"]

[project.urls]
Homepage = "https://github.com/norlab-ulaval/norlab_controllers"

[tool.flit.sdist]
exclude = ["examples/"]

[tool.black]
line-length = 90

[tool.pylint]
[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "90"